SSO session expiration
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-redirects@876 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -81,6 +81,11 @@
 		<param-name>disable-hotp</param-name>
 		<param-value>false</param-value>
 	</context-param>
+
+    <context-param>
+   		<param-name>superfly-max-sso-session-age-minutes</param-name>
+   		<param-value>30</param-value>
+   	</context-param>
 	
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
