OTP for Single Sign-on
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-redirects@883 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
 	
 	<context-param>
 		<param-name>superfly-policy</param-name>
-		<param-value>none</param-value>
+		<param-value>none</param-value> <!-- none or pcidss -->
 	</context-param>
 	<!-- This is for constant salt generator -->
 	<context-param>
