Single sign-on forms are skinnable
git-svn-id: https://superfly.googlecode.com/svn/branches/superfly-redirects@884 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -16,6 +16,7 @@ subsystem.add.subsystemUrl=Subsystem URL
 subsystem.add.subsystemUrl.Required=Subsystem URL is required
 subsystem.add.landingUrl=Landing URL
 subsystem.add.landingUrl.Required=Landing URL is required
+subsystem.add.loginFormCssUrl=Login form CSS URL
 subsystem.add.allow-list-users=Allow list users
 subsystem.edit.name=Name
 subsystem.edit.name.Required=Name is required
@@ -27,6 +28,7 @@ subsystem.edit.subsystemUrl=Subsystem URL
 subsystem.edit.subsystemUrl.Required=Subsystem URL is required
 subsystem.edit.landingUrl=Landing URL
 subsystem.edit.landingUrl.Required=Landing URL is required
+subsystem.edit.loginFormCssUrl=Login form CSS URL
 subsystem.edit.allow-list-users=Allow list users
 subsystem.smtpServer=SMTP server
 
