SSL enabled protocols list is configurable and configured everywhere we need
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@909 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -410,7 +410,7 @@
 		    <dependency>
 		        <groupId>com.googlecode.xremoting</groupId>
 		        <artifactId>xremoting-core</artifactId>
-		        <version>1.0-6</version>
+		        <version>1.0-7</version>
 		    </dependency>
 		    <dependency>
 		        <groupId>com.thoughtworks.xstream</groupId>
@@ -558,6 +558,12 @@
 				<artifactId>bcpg-jdk15</artifactId>
 				<version>1.45</version>
 			</dependency>
+
+            <dependency>
+                <groupId>ca.juliusdavies</groupId>
+                <artifactId>not-yet-commons-ssl</artifactId>
+                <version>0.3.9</version>
+            </dependency>
 	    	
 	        <dependency>
 	        	<groupId>org.easymock</groupId>
