--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -46,6 +46,10 @@
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ca.juliusdavies</groupId>
+            <artifactId>not-yet-commons-ssl</artifactId>
+        </dependency>
 		
 		<dependency>
 			<groupId>org.springframework.security</groupId>
