--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-		<version>1.4-2</version>
+		<version>1.4-3-SNAPSHOT</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-client</artifactId>
