--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>superfly-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>Superfly parent project</name>
-	<version>1.4-3</version>
+	<version>1.4-4-SNAPSHOT</version>
 	<description>Parent POM of the Superfly project</description>
 	<modules>
 		<module>superfly-remote-api</module>
@@ -33,9 +33,9 @@
 	<url>http://code.google.com/p/superfly/</url>
 
 	<scm>
-		<connection>scm:svn:https://superfly.googlecode.com/svn/tags/superfly-parent-1.4-3</connection>
-		<developerConnection>scm:svn:https://superfly.googlecode.com/svn/tags/superfly-parent-1.4-3</developerConnection>
-		<url>http://superfly.googlecode.com/tags/superfly-parent-1.4-3</url>
+		<connection>scm:svn:https://superfly.googlecode.com/svn/trunk/superfly/</connection>
+		<developerConnection>scm:svn:https://superfly.googlecode.com/svn/trunk/superfly/</developerConnection>
+		<url>http://superfly.googlecode.com/</url>
 	</scm>
 	
 	<licenses>
