Upgraded to wicket 1.5
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@928 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,7 @@
 				<groupId>org.apache.wicket</groupId>
 				<artifactId>wicket</artifactId>
 				<version>${wicket.version}</version>
+                <type>pom</type>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.wicket</groupId>
@@ -625,7 +626,7 @@
 		<spring.security_2.version>2.0.4</spring.security_2.version>
 		<aspectj.version>1.6.5</aspectj.version>
 		
-		<wicket.version>1.4.21</wicket.version>
+		<wicket.version>1.5.10</wicket.version>
 		<jetty.version>6.1.21</jetty.version>
 	</properties>
 	
