--- a/superfly-wicket/pom.xml
+++ b/superfly-wicket/pom.xml
@@ -14,6 +14,7 @@
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket</artifactId>
+            <type>pom</type>
 		</dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
