--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
     </context-param>
     <context-param>
     	<param-name>configuration</param-name>
-    	<param-value>development</param-value>
+    	<param-value>deployment</param-value>
     </context-param>
 	<context-param>
 		<param-name>webAppRootKey</param-name>
