--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,10 @@
 		<param-name>superfly-hotpTableSize</param-name>
 		<param-value>100</param-value>
 	</context-param>
+    <context-param>
+   		<param-name>superfly-enable-hotp-emails</param-name>
+   		<param-value>true</param-value>
+   	</context-param>
 	
 	<context-param>
 		<param-name>disable-hotp</param-name>
