Exported current application version number via /management/version.txt url
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@940 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -131,6 +131,16 @@
         <servlet-name>remoting</servlet-name>
         <url-pattern>/remoting/*</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>version</servlet-name>
+        <servlet-class>com.payneteasy.superfly.web.servlet.VersionNumberServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>version</servlet-name>
+        <url-pattern>/management/version.txt</url-pattern>
+    </servlet-mapping>
     
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
@@ -147,7 +157,7 @@
         </init-param>
         <init-param>
         	<param-name>ignorePaths</param-name>
-        	<param-value>/remoting/,/sso/</param-value>
+        	<param-value>/remoting/,/sso/,/management/version.txt</param-value>
         </init-param>
     </filter>
 
