Доработка юзабилити и дизайна Superfly
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@943 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -56,6 +56,7 @@ user.create.password2=Password confirmation
 user.create.password2.EqualPasswordInputValidator=Password and confirmation must match
 user.create.password2.Required=Password confirmation is required
 user.create.publicKey=Public key
+user.create.isAccountLocked=Account is locked
 user.create.name=Name
 user.create.name.Required=Name is required
 user.create.surname=Surname
