Added hessian exporter for SSOService
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@952 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/pom.xml
+++ b/superfly-web/pom.xml
@@ -80,6 +80,11 @@
 	        <groupId>com.thoughtworks.xstream</groupId>
 	        <artifactId>xstream</artifactId>
 	    </dependency>
+
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+        </dependency>
 	    
 		<!-- WICKET DEPENDENCIES -->
 		<dependency>
