--- a/pom.xml
+++ b/pom.xml
@@ -417,6 +417,12 @@
 		        <artifactId>xstream</artifactId>
 		        <version>1.1.1</version>
 		    </dependency>
+
+            <dependency>
+                <groupId>com.caucho</groupId>
+                <artifactId>hessian</artifactId>
+                <version>4.0.7</version>
+            </dependency>
 		    
 	        <dependency>
 	        	<groupId>org.apache.velocity</groupId>
