--- a/superfly-spi-support/pom.xml
+++ b/superfly-spi-support/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.5-1-SNAPSHOT</version>
+        <version>1.5-1</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spi-support</artifactId>
