adding organization property for sso user
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.6@981 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -64,6 +64,7 @@ user.create.surname.Required=Surname is required
 user.create.secret-question=Secret question
 user.create.secret-question.Required=Secret question is required
 user.create.secret-answer=Secret answer
+user.create.organization=Organization
 user.create.secret-answer.Required=Secret answer is required
 user.create.choice-subsystem=Subsystem
 user.create.choice-subsystem.Required=Subsystem is required
