[maven-release-plugin] prepare release superfly-parent-1.6-1
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@993 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-wicket/pom.xml
+++ b/superfly-wicket/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-1-SNAPSHOT</version>
+        <version>1.6-1</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-wicket</artifactId>
