--- a/superfly-wicket/pom.xml
+++ b/superfly-wicket/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-2-SNAPSHOT</version>
+        <version>1.6-2</version>
 	</parent>
 	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-wicket</artifactId>
