--- a/pom.xml
+++ b/pom.xml
@@ -83,12 +83,12 @@
         <repository>
             <id>sonatype-nexus-staging</id>
             <name>sonatype oss RELEASE repository</name>
-            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
         <snapshotRepository>
             <id>sonatype-nexus-snapshots</id>
             <name>sonatype oss SNAPSHOT repository</name>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
 	</distributionManagement>
