Fixed builing in Java8
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@1016 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/pom.xml
+++ b/pom.xml
@@ -621,6 +621,16 @@
 					<ajdtVersion>none</ajdtVersion>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.1</version>
+                <configuration>
+                    <!-- this is to disable JDK-supplied doclint which is too strict
+                     causes the build to fail -->
+                    <additionalparam>-Xdoclint:none</additionalparam>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	
