--- a/superfly-demo/src/main/webapp/WEB-INF/log4j.properties
+++ b/superfly-demo/src/main/webapp/WEB-INF/log4j.properties
@@ -3,7 +3,7 @@ log4j.appender.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.conversionPattern=%-5p %-26.26c{1} - %m\n
 
-log4j.rootLogger=WARN,console
+log4j.rootLogger=INFO,console
 
 log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
