Fixed data sending from superfly-demo
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@1022 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-demo/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-demo/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,7 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
+            /WEB-INF/spring-context.xml
         	/WEB-INF/superfly-client.xml
         	/WEB-INF/spring-security-2.0.xml
         </param-value>
