--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -61,5 +61,10 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
