--- a/superfly-httpclient-ssl/pom.xml
+++ b/superfly-httpclient-ssl/pom.xml
@@ -5,7 +5,6 @@
         <version>1.6-6-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-httpclient-ssl</artifactId>
 	<name>HttpClient SSL Extensions</name>
 	<description>Extensions to HttpClient which allow to use client SSL authentication as well as server trust check</description>
@@ -14,5 +13,9 @@
 	    	<groupId>commons-httpclient</groupId>
 	    	<artifactId>commons-httpclient</artifactId>
 	    </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
