--- a/superfly-jira-integration/pom.xml
+++ b/superfly-jira-integration/pom.xml
@@ -5,7 +5,6 @@
         <version>1.6-6-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-jira-integration</artifactId>
 	<name>Superfly Integration for JIRA</name>
 	<description>Allows to use Superfly as authentication/authorization provider for JIRA</description>
@@ -40,5 +39,9 @@
 	        <groupId>com.googlecode.xremoting</groupId>
 	        <artifactId>xremoting-core</artifactId>
 	    </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
