--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -60,10 +60,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
-	    <dependency>
-	    	<groupId>org.aspectj</groupId>
-	    	<artifactId>aspectjrt</artifactId>
-	    </dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
 	    <dependency>
 	    	<groupId>org.aspectj</groupId>
 	    	<artifactId>aspectjweaver</artifactId>
