--- a/pom.xml
+++ b/pom.xml
@@ -804,27 +804,44 @@
             </plugin>
 
 			<plugin>
-       <groupId>org.apache.maven.plugins</groupId>
-       <artifactId>maven-enforcer-plugin</artifactId>
-       <executions>
-           <execution>
-               <id>enforce-ban-duplicate-classes</id>
-               <goals>
-                   <goal>enforce</goal>
-               </goals>
-               <configuration>
-                   <rules>
-                       <banDuplicateClasses>
-                           <findAllDuplicates>true</findAllDuplicates>
-                           <dependencies>
-						   </dependencies>
-                       </banDuplicateClasses>
-                   </rules>
-                   <fail>true</fail>
-               </configuration>
-           </execution>
-       </executions>
-   </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>enforce-ban-duplicate-classes</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<banDuplicateClasses>
+									<findAllDuplicates>true</findAllDuplicates>
+									<dependencies/>
+								</banDuplicateClasses>
+							</rules>
+							<fail>true</fail>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>enforce-banned-dependencies</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<bannedDependencies>
+									<excludes>
+										<exclude>commons-logging</exclude>
+										<exclude>xml-apis:xml-apis</exclude>
+									</excludes>
+								</bannedDependencies>
+							</rules>
+							<fail>true</fail>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	
