--- a/pom.xml
+++ b/pom.xml
@@ -769,22 +769,6 @@
 
 		<plugins>
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-					<encoding>utf-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-                <version>2.4.3</version>
-				<configuration>
-					<encoding>utf-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<version>2.8</version>
@@ -844,7 +828,7 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<properties>
 		<jdbcproc.version>1.1-4</jdbcproc.version>
 		<slf4j.version>1.7.12</slf4j.version>
@@ -852,11 +836,17 @@
 		<spring.security.version>3.1.4.RELEASE</spring.security.version>
 		<spring.security_2.version>2.0.4</spring.security_2.version>
 		<aspectj.version>1.6.5</aspectj.version>
-		
+
 		<wicket.version>6.6.0</wicket.version>
 		<jetty.version>6.1.21</jetty.version>
+
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+
+		<java.version>1.6</java.version>
 	</properties>
-	
+
 	<profiles>
 		<profile>
 			<id>deploy</id>
