--- a/superfly-crypto/pom.xml
+++ b/superfly-crypto/pom.xml
@@ -13,5 +13,9 @@
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcpg-jdk15</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
