--- a/pom.xml
+++ b/pom.xml
@@ -849,25 +849,6 @@
 		</plugins>
 	</build>
 
-	<properties>
-		<jdbcproc.version>1.1-4</jdbcproc.version>
-		<slf4j.version>1.7.12</slf4j.version>
-		<spring.version>3.2.5.RELEASE</spring.version>
-		<spring.security.version>3.1.4.RELEASE</spring.security.version>
-		<spring.security_2.version>2.0.4</spring.security_2.version>
-		<aspectj.version>1.6.5</aspectj.version>
-
-		<wicket.version>6.6.0</wicket.version>
-		<jetty.version>6.1.21</jetty.version>
-
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
-		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
-
-		<java.version>1.7</java.version>
-		<modernizer.failOnViolations>true</modernizer.failOnViolations>
-	</properties>
-
 	<profiles>
 		<profile>
 			<id>deploy</id>
@@ -888,6 +869,55 @@
 					</plugin>
 				</plugins>
 			</build>
-    	</profile>
+		</profile>
+
+		<profile>
+			<id>owasp-dependency-check</id>
+			<build>
+				<plugins>
+					<!-- OWASP dependency check -->
+				</plugins>
+			</build>
+			<reporting>
+				<plugins>
+					<!-- OWASP dependency check -->
+					<plugin>
+						<groupId>org.owasp</groupId>
+						<artifactId>dependency-check-maven</artifactId>
+<!--
+						<configuration>
+							<suppressionFile>src/main/dependency-check/suppressions.xml</suppressionFile>
+						</configuration>
+-->
+						<reportSets>
+							<reportSet>
+								<reports>
+									<report>aggregate</report>
+								</reports>
+							</reportSet>
+						</reportSets>
+					</plugin>
+				</plugins>
+			</reporting>
+		</profile>
 	</profiles>
+
+	<properties>
+		<jdbcproc.version>1.1-4</jdbcproc.version>
+		<slf4j.version>1.7.12</slf4j.version>
+		<spring.version>3.2.5.RELEASE</spring.version>
+		<spring.security.version>3.1.4.RELEASE</spring.security.version>
+		<spring.security_2.version>2.0.4</spring.security_2.version>
+		<aspectj.version>1.6.5</aspectj.version>
+
+		<wicket.version>6.6.0</wicket.version>
+		<jetty.version>6.1.21</jetty.version>
+
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+
+		<java.version>1.7</java.version>
+		<modernizer.failOnViolations>true</modernizer.failOnViolations>
+	</properties>
 </project>
