--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -5,7 +5,6 @@
         <version>1.6-6-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-client-opt</artifactId>
 	<name>Superfly Client optional support</name>
 	<description>Optional Superfly-related client features (like SSL support)</description>
@@ -43,8 +42,8 @@
 			<artifactId>superfly-httpclient-ssl</artifactId>
 		</dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
+			<groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
         <dependency>
             <groupId>ca.juliusdavies</groupId>
