--- a/superfly-common/pom.xml
+++ b/superfly-common/pom.xml
@@ -5,7 +5,6 @@
         <version>1.6-6-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-common</artifactId>
 	<name>Common classes</name>
 	<description>Common classes used by other Superfly libraries</description>
@@ -20,7 +19,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 
 		<dependency>
