--- a/superfly-spring-security-2.0/pom.xml
+++ b/superfly-spring-security-2.0/pom.xml
@@ -5,7 +5,6 @@
         <version>1.6-6-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.payneteasy.superfly</groupId>
 	<artifactId>superfly-spring-security-2.0</artifactId>
 	<name>Spring Security 2.0.x Extension for Superfly</name>
 	<description>Module for Spring Security 2.0.x which enables application to use Superfly authentication/authorization declaratively through Spring Security 2.0.x</description>
@@ -38,7 +37,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 	</dependencies>
 </project>
