--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>superfly-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>Superfly parent project</name>
-	<version>1.6-6-SNAPSHOT</version>
+	<version>1.6-6</version>
 	<description>Parent POM of the Superfly project</description>
 	<modules>
 		<module>superfly-remote-api</module>
@@ -647,7 +647,7 @@
 							<rules>
 								<banDuplicateClasses>
 									<findAllDuplicates>true</findAllDuplicates>
-									<dependencies/>
+									<dependencies />
 								</banDuplicateClasses>
 							</rules>
 							<fail>true</fail>
