--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-8-SNAPSHOT</version>
+        <version>1.6-8</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.payneteasy.superfly</groupId>
