--- a/superfly-crypto/pom.xml
+++ b/superfly-crypto/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-9</version>
+        <version>1.6-10-SNAPSHOT</version>
 	</parent>
     <artifactId>superfly-crypto</artifactId>
 	<name>Superfly helper crypto services</name>
