--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ jdk: oraclejdk8
 before_install:
   - ls -l /usr/local
   - cat /etc/mavenrc
+  - pwd
+  - (cd ./install && ./install.sh)
 
 cache:
   directories:
