--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk8
 
 before_install:
-  - ls -l /usr/local
+  - sudo ls -l /usr/local
   - cat /etc/mavenrc
   - pwd
   - (cd ./install && ./install.sh)
