--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -16,6 +16,7 @@ subsystem.add.title=Title
 subsystem.add.title.Required=Title is required
 subsystem.add.callback=Callback Info
 subsystem.add.callback.Required=Callback Info is required
+subsystem.add.send-callbacks=Send callbacks
 subsystem.add.subsystemUrl=Subsystem URL
 subsystem.add.subsystemUrl.Required=Subsystem URL is required
 subsystem.add.landingUrl=Landing URL
@@ -28,6 +29,7 @@ subsystem.edit.title=Title
 subsystem.edit.title.Required=Title is required
 subsystem.edit.callback=Callback Info
 subsystem.edit.callback.Required=Callback Info is required
+subsystem.edit.send-callbacks=Send callbacks
 subsystem.edit.subsystemUrl=Subsystem URL
 subsystem.edit.subsystemUrl.Required=Subsystem URL is required
 subsystem.edit.landingUrl=Landing URL
