--- a/superfly-spring-security-common/pom.xml
+++ b/superfly-spring-security-common/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-10</version>
+        <version>1.6-11-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>superfly-spring-security-common</artifactId>
