--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>superfly-parent</artifactId>
 		<groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-11-SNAPSHOT</version>
+        <version>1.6-11</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>superfly-client-opt</artifactId>
