--- a/superfly-spi/pom.xml
+++ b/superfly-spi/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.6-11</version>
+        <version>1.6-12-SNAPSHOT</version>
     </parent>
     <groupId>com.payneteasy.superfly</groupId>
     <artifactId>superfly-spi</artifactId>
