--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.payneteasy.superfly</groupId>
