--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
