#12 Demo should use more modern spring-security module
- migrated demo to SNAPSHOT superfly version

--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -195,7 +195,7 @@
     </build>
 
     <properties>
-        <superfly.version>1.6-12</superfly.version>
+        <superfly.version>1.6-13-SNAPSHOT</superfly.version>
         <spring.version>4.3.7.RELEASE</spring.version>
         <spring.security.version>3.2.10.RELEASE</spring.security.version>
         <wicket.version>6.22.0</wicket.version>
