#12 Demo should use more modern spring-security module
- using properties to specify java version and resource encoding

--- a/superfly-demo/pom.xml
+++ b/superfly-demo/pom.xml
@@ -174,20 +174,6 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <encoding>utf-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
-                <configuration>
-                    <encoding>utf-8</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
                 <configuration>
@@ -203,6 +189,14 @@
         <spring.security.version>3.2.10.RELEASE</spring.security.version>
         <wicket.version>6.22.0</wicket.version>
         <slf4j.version>1.6.6</slf4j.version>
+
+        <java.version>1.7</java.version>
+
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     </properties>
 
 
