--- a/superfly-web/src/main/webapp/WEB-INF/log4j.properties
+++ b/superfly-web/src/main/webapp/WEB-INF/log4j.properties
@@ -17,3 +17,5 @@ log4j.rootLogger=INFO,console
 #log4j.logger.com.payneteasy=DEBUG
 #log4j.logger.org.springframework=DEBUG
 #log4j.logger.com.googlecode=DEBUG
+
+#log4j.logger.org.springframework.security=DEBUG
