--- a/superfly-crypto/pom.xml
+++ b/superfly-crypto/pom.xml
@@ -11,7 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcpg-jdk15</artifactId>
+            <artifactId>bcpg-jdk15on</artifactId>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
