--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -28,12 +28,8 @@
         </param-value>
     </context-param>
     <context-param>
-        <param-name>log4jConfigLocation</param-name>
-        <param-value>/WEB-INF/log4j.properties</param-value>
-    </context-param>
-    <context-param>
-        <param-name>log4jRefreshInterval</param-name>
-        <param-value>2000</param-value>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>/WEB-INF/logback.xml</param-value>
     </context-param>
     <context-param>
         <param-name>configuration</param-name>
@@ -81,9 +77,9 @@
         <param-value>100</param-value>
     </context-param>
     <context-param>
-           <param-name>superfly-enable-hotp-emails</param-name>
-           <param-value>true</param-value>
-       </context-param>
+        <param-name>superfly-enable-hotp-emails</param-name>
+        <param-value>true</param-value>
+    </context-param>
 
     <context-param>
         <param-name>disable-hotp</param-name>
@@ -96,7 +92,7 @@
        </context-param>
 
     <listener>
-        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
     </listener>
     <listener>
         <listener-class>com.payneteasy.superfly.web.spring.CustomContextLoaderListener</listener-class>
